# swat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  rebuild-win.sh  rebuild.sh
docs/: Demo.md  Introspection.md  QemuPlugins.md  ReverseDebugging.md  WinDbg.md
qemu-plugins/: CMakeLists.txt
qemu-plugins/exec-log/: CMakeLists.txt
qemu-plugins/introspection/: CMakeLists.txt  context.c  file.c  function.c  helper.c  introspection.c  introspection.h  linux-i386-syscall-map.h  mapping.c  module-elf.c  module-pe.c  module.c  module.h  process.c  section.c  syscall-aarch64.c  syscall-arm.c  syscall-functions.h  syscall-i386.c  syscall-linux.c  syscall-linux32.c  syscall-linux64.c  syscall-table-linux-x86_64.h  syscall-table-win10x64.h  syscall-win32.c  syscall-win64.c  syscall-x86_64.c  syscalls-windows.h  syscalls.c  syscalls.h
